[package]
name = "testing-bridge-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.2.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12"

near-primitives = "0.28.0"
near-sdk = "5.8.1"
bson = "2.13.0"
bridge-indexer-types = { git = "ssh://git@github.com/near-one/bridge-indexer-rs.git", package = "bridge-indexer-types", branch = "remove-unused-deps" }
